--- a/Resources/Styles/Styles.xaml
+++ b/Resources/Styles/Styles.xaml
@@ -449,10 +449,9 @@
         <Setter Property="Shell.TabBarForegroundColor" Value="{AppThemeBinding Light={StaticResource Magenta}, Dark={StaticResource White}}" />
         <Setter Property="Shell.TabBarTitleColor" Value="{AppThemeBinding Light={StaticResource Magenta}, Dark={StaticResource White}}" />
         <Setter Property="Shell.TabBarUnselectedColor" Value="{AppThemeBinding Light={StaticResource Gray900}, Dark={StaticResource Gray200}}" />
-        <!-- set Flyout Background from here does not work in ios, set it in AppShell -->
-        <!--<Setter Property="Shell.FlyoutBackgroundColor" Value="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource OffBlack}}" />-->
     </Style>
-    
+
+<!-- this style causes the problem on Android
     <Style TargetType="Label" Class="FlyoutItemLabelStyle">
         <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource Secondary}, Dark={StaticResource SecondaryDarkText}}" />
         <Setter Property="FontAttributes" Value="Bold" />
@@ -460,17 +459,21 @@
         <Setter Property="FontFamily" Value="OpenSansSemibold" />
         <Setter Property="HeightRequest" Value="100" />
     </Style>
+-->
 
     <!-- this Style does not work currently, FontImageSource does not support Styles. bug in Maui -->
+<!--
     <Style TargetType="FontImageSource" x:Key="FlyoutIconStyle">
         <Setter Property="Color" Value="{AppThemeBinding Light={StaticResource Secondary}, Dark={StaticResource SecondaryDarkText}}" />
         <Setter Property="FontFamily" Value="FontAwesomeSolid" />
         <Setter Property="Size" Value="20" />
     </Style>
-    
+-->
+
     <Style TargetType="Image" Class="FlyoutItemImageStyle">
         <Setter Property="Aspect" Value="Fill" />
     </Style>
+
 
     <Style TargetType="Layout" Class="FlyoutItemLayoutStyle" ApplyToDerivedTypes="True">
         <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource OffBlack}}" />
